tests/fixtures/negative/subscription_slot_mismatch.wrela
// expect: SEM0035: subscription sub belongs to slot other but executor Worker uses slot worker
module negative.subscription_slot_mismatch

module machine.x86_64.cpu_state
data SlotIdentity { label: StringLiteral }
data ExecutorSlot { id: U64 }
class ExecutorRegistry { fn claim(self, identity: SlotIdentity) -> ExecutorSlot { return ExecutorSlot(id = 0) } }

module machine.x86_64.topic_u64
use { ExecutorSlot } from machine.x86_64.cpu_state
data TopicIdentity { label: StringLiteral }
class U64GapTopic {
    identity: TopicIdentity
    fn subscribe(self, subscriber: ExecutorSlot) -> U64GapSubscription { return U64GapSubscription(topic = self, subscriber = subscriber) }
}
data U64GapSubscription { topic: U64GapTopic; subscriber: ExecutorSlot }

module negative.subscription_slot_mismatch.app
use { ExecutorRegistry, SlotIdentity, ExecutorSlot } from machine.x86_64.cpu_state
use { TopicIdentity, U64GapSubscription, U64GapTopic } from machine.x86_64.topic_u64

executor Worker {
    slot: ExecutorSlot
    input: U64GapSubscription
    start fn run(self) -> never { while true {} }
}

image Bad {
    transitions { delegated_hardware -> owned_hardware }
    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware { return hardware.exit_to_owned_hardware() }
    phase owned_hardware(hardware: OwnedHardware) -> never {
        let registry = ExecutorRegistry()
        let worker_slot = registry.claim(identity = SlotIdentity(label = "worker"))
        let other_slot = registry.claim(identity = SlotIdentity(label = "other"))
        let topic = U64GapTopic(identity = TopicIdentity(label = "counter"))
        let sub = topic.subscribe(subscriber = other_slot)
        let worker = Worker(slot = worker_slot, input = sub)
        while true {}
    }
}
